# normalized-line-endings

./: CITATION.cff  COVERAGE.md  Cargo.toml  NOTES_AT_FUTURE_ME.md  README.md  Taskfile.yml  index.html
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-manual.yml  build-windows.yml
docs/: README.md
manual/: book.toml
manual/src/: SUMMARY.md  overview.md  readme.md
readme/: README_BODY.html  README_BODY.md  README_FOOTER.md  README_HEADER.md
src/: annotated.rs  common.rs  index.html  lib.rs  line_ending.rs  normalized.rs
tests/: annotated.rs  combinations.rs  common.rs  line_ending.rs  normalized.rs  test_normalized.rs
