[package]
name = "normalized-line-endings"
version = "1.0.11"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Line endings normalizer"
documentation = "https://docs.rs/normalized-line-endings"
repository = "https://github.com/EngosSoftware/normalized-line-endings.git"
keywords = ["normalized", "line", "endings", "iterator"]
homepage = "https://engossoftware.github.io/normalized-line-endings/"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    "CODE_OF_CONDUCT.md",
    "manual/"
]
